--- a/.gitignore
+++ b/.gitignore
@@ -23,14 +23,12 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Ruff
+.ruff_cache/
+
 # Virtual Environment
 .env
 .venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
 
 # Editor
 .vscode/
