--- a/agentic-framework/pyproject.toml
+++ b/agentic-framework/pyproject.toml
@@ -37,7 +37,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [dependency-groups]
-dev = ["pytest>=8.0.0", "ruff>=0.3.0", "mypy>=1.9.0"]
+dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.3.0", "mypy>=1.9.0"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
