feat(core): centralize default model via DEFAULT_MODEL constant
Introduce a DEFAULT_MODEL constant and use it throughout core agents
to avoid hardcoded model names. Add constants.py support for picking
the default model from the environment (OPENAI_MODEL_NAME) with a
fallback to "gpt-4o-mini", and expand the .env.example to document the
OPENAI_MODEL_NAME and common OpenAI-compatible base URLs.

- Add DEFAULT_MODEL in agentic_framework/constants.py and read from
  OPENAI_MODEL_NAME env var.
- Replace hardcoded "gpt-5-nano" with DEFAULT_MODEL in:
  - langgraph_agent.py
  - travel_coordinator_agent.py
  - simple_agent.py
- Update .env.example to document OPENAI_MODEL_NAME and optional
  OPENAI_BASE_URL entries for various providers.

This centralizes model configuration, makes the default model
configurable via environment, and improves maintainability and clarity.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,16 @@
 # Required Environment Variables
 OPENAI_API_KEY="sk-*****"
 
+# Optional: Model selection (defaults to gpt-4o-mini if not set)
+# OPENAI_MODEL_NAME="gpt-4o-mini"
+# OPENAI_MODEL_NAME="glm-4.5-air"                    # z.ai
+
+# Optional: Use OpenAI-compatible APIs (uncomment one)
+# OPENAI_BASE_URL="https://api.z.ai/api/coding/paas/v4"    # z.ai
+# OPENAI_BASE_URL="https://openrouter.ai/api/v1"     # OpenRouter
+# OPENAI_BASE_URL="http://localhost:11434/v1"        # Ollama (local)
+# OPENAI_BASE_URL="http://localhost:1234/v1"         # LM Studio (local)
+
 # Agentic Web Search
 TAVILY_API_KEY="tvly-****"
 
