--- a/agentic-framework/pyproject.toml
+++ b/agentic-framework/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "langchain-core>=1.1.3",
     "typer>=0.12.0",
     "rich>=13.0.0",
+    "tree-sitter==0.21.3",
+    "tree-sitter-languages>=1.10.2",
 ]
 
 [project.scripts]
