--- a/agentic-framework/pyproject.toml
+++ b/agentic-framework/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "rich>=13.0.0",
     "tree-sitter==0.21.3",
     "tree-sitter-languages>=1.10.2",
+    "requests>=2.32.5",
 ]
 
 [project.scripts]
@@ -36,7 +37,13 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [dependency-groups]
-dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.3.0", "mypy>=1.9.0"]
+dev = [
+    "pytest>=8.0.0",
+ "pytest-cov>=5.0.0",
+ "ruff>=0.3.0",
+ "mypy>=1.9.0",
+ "types-requests>=2.32.4.20260107",
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
