docs: add GITHUB_TOKEN to .env.example for github-pr-reviewer agent

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ OPENAI_API_KEY="sk-*****"
 
 # Optional Environment Variables
 
+# GitHub PR Reviewer agent (github-pr-reviewer)
+# Required only when using the github-pr-reviewer agent.
+# Needs a personal access token (classic or fine-grained) with pull_requests: write permission.
+# GITHUB_TOKEN="github_pat_*****"
+
 # Evaluation and tracing with Langsmith
 LANGSMITH_API_KEY="lsv********"
 LANGSMITH_TRACING=true
