docs: clarify GITHUB_TOKEN scope requirements in .env.example

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,9 @@ OPENAI_API_KEY="sk-*****"
 
 # GitHub PR Reviewer agent (github-pr-reviewer)
 # Required only when using the github-pr-reviewer agent.
-# Needs a personal access token (classic or fine-grained) with pull_requests: write permission.
+# Classic token scopes required:
+#   - "repo" for private repositories (full repo access, includes comment/review permissions)
+#   - "public_repo" is sufficient if only reviewing public repositories
 # GITHUB_TOKEN="github_pat_*****"
 
 # Evaluation and tracing with Langsmith
