docs: update Anthropic model names to Claude 4.x
- .env.example: replace deprecated claude-3-5-sonnet-20241022 with
  current model options (claude-sonnet-4-6, claude-opus-4-6, claude-haiku-4-5-20251001)
- constants.py: sync get_default_model() docstring example with actual
  default (claude-haiku-4-5-20251001)

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,9 @@ OPENAI_API_KEY="sk-*****"
 # For OpenAI (default: gpt-4o-mini)
 # OPENAI_MODEL_NAME="gpt-4o-mini"
 # OPENAI_MODEL_NAME="glm-4.5-air"                    # z.ai
-# For Anthropic (default: claude-3-5-sonnet-20241022)
+# For Anthropic (default: claude-sonnet-4-6)
+# ANTHROPIC_MODEL_NAME="claude-sonnet-4-6"
+# ANTHROPIC_MODEL_NAME="claude-opus-4-6"
 # ANTHROPIC_MODEL_NAME="claude-haiku-4-5-20251001"
 
 # Optional: Use OpenAI-compatible APIs (uncomment one)
