Feat/GitHub pr reviewer (#15)
* feat: add GitHub PR Reviewer agent

Adds a new 'github-pr-reviewer' agent with 6 GitHub API tools:
- get_pr_metadata: fetch PR title, author, base branch, and head SHA
- get_pr_diff: fetch per-file patches for a pull request
- get_pr_comments: fetch both inline review and general comments
- post_review_comment: post inline comment on a specific file+line
- post_general_comment: post top-level PR summary comment
- reply_to_review_comment: reply to an existing comment thread

The agent reads GITHUB_TOKEN from the environment (never hardcoded),
returns error strings on failure (no raised exceptions), and ships
with 25 tests at 100% coverage.

Also adds 'requests' runtime dep and 'types-requests' mypy stub.

* fix: address PR review feedback on github-pr-reviewer agent

- constants.py: clarify detect_provider() docstring — OpenAI is the
  default fallback; Anthropic takes precedence when both keys are set

- github_pr_reviewer.py: add _github_request() helper with exponential
  backoff retry (1s, 2s) for transient 429/503/504 GitHub API errors;
  all six tools now route through this helper

- github_pr_reviewer.py: validate line > 0 in post_review_comment with
  a clear error message before making the API call

- github_pr_reviewer.py: document the 2000-char description truncation
  in get_pr_metadata with an inline comment

* docs: add GITHUB_TOKEN to .env.example for github-pr-reviewer agent

* docs: clarify GITHUB_TOKEN scope requirements in .env.example

* docs: update Anthropic model names to Claude 4.x

- .env.example: replace deprecated claude-3-5-sonnet-20241022 with
  current model options (claude-sonnet-4-6, claude-opus-4-6, claude-haiku-4-5-20251001)
- constants.py: sync get_default_model() docstring example with actual
  default (claude-haiku-4-5-20251001)

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,9 @@ OPENAI_API_KEY="sk-*****"
 # For OpenAI (default: gpt-4o-mini)
 # OPENAI_MODEL_NAME="gpt-4o-mini"
 # OPENAI_MODEL_NAME="glm-4.5-air"                    # z.ai
-# For Anthropic (default: claude-3-5-sonnet-20241022)
+# For Anthropic (default: claude-sonnet-4-6)
+# ANTHROPIC_MODEL_NAME="claude-sonnet-4-6"
+# ANTHROPIC_MODEL_NAME="claude-opus-4-6"
 # ANTHROPIC_MODEL_NAME="claude-haiku-4-5-20251001"
 
 # Optional: Use OpenAI-compatible APIs (uncomment one)
@@ -17,6 +19,13 @@ OPENAI_API_KEY="sk-*****"
 # OPENAI_BASE_URL="http://localhost:1234/v1"         # LM Studio (local)
 
 # Optional Environment Variables
+
+# GitHub PR Reviewer agent (github-pr-reviewer)
+# Required only when using the github-pr-reviewer agent.
+# Classic token scopes required:
+#   - "repo" for private repositories (full repo access, includes comment/review permissions)
+#   - "public_repo" is sufficient if only reviewing public repositories
+# GITHUB_TOKEN="github_pat_*****"
 
 # Evaluation and tracing with Langsmith
 LANGSMITH_API_KEY="lsv********"
