--- a/agentic-framework/pyproject.toml
+++ b/agentic-framework/pyproject.toml
@@ -27,6 +27,11 @@ dependencies = [
     "tree-sitter==0.21.3",
     "tree-sitter-languages>=1.10.2",
     "requests>=2.32.5",
+    "langchain-groq>=1.1.2",
+    "langchain-mistralai>=1.1.1",
+    "langchain-cohere>=0.5.0",
+    "langchain-aws>=1.3.1",
+    "langchain-huggingface>=1.2.0",
 ]
 
 [project.scripts]
